--- a/BlendWorks Server/My Project/Resources.resx
+++ b/BlendWorks Server/My Project/Resources.resx
@@ -272,4 +272,10 @@
   <data name="String1" xml:space="preserve">
     <value />
   </data>
+  <data name="blender_socket" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\blender-socket.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="setagon_Black_Small" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\setagon Black Small.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
